Version control: fix ids replacement in dashboard config